k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-python-deployment
  labels:
    app: demo-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-python
  template:
    metadata:
      labels:
        app: demo-python
    spec:
      containers:
        - name: demo-python
          image: k1ng231515/devsu-demo-devops-python:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: sqlite-storage
              mountPath: /app/db
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
      restartPolicy: Always
