k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demopt.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-python-service
                port:
                  number: 80
